--- a/app.json
+++ b/app.json
@@ -11,17 +11,21 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera"
+      },
+      "bundleIdentifier": "com.u-power-tools-app.development"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["android.permission.CAMERA"],
+      "package": "com.u_power_tools_app.development"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +35,14 @@
         "projectId": "76da9477-d80f-4598-bc87-3d37a676a494"
       }
     },
-    "owner": "charlesx19"
+    "owner": "charlesx19",
+    "plugins": [
+      [
+        "react-native-vision-camera",
+        {
+          "enableCodeScanner": true
+        }
+      ]
+    ]
   }
 }
