--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
     "expo": "~50.0.8",
+    "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
