--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "u-power-tools-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.8",
     "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
