--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.8",
+    "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
