--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "dayjs": "^1.11.10",
     "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
+    "expo-file-system": "~16.0.8",
+    "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^3.9.0"
+    "react-native-vision-camera": "^3.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
