--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pod:deintegrate": "cd ios && pod deintegrate && cd ../"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "7.6.3",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
@@ -18,6 +18,7 @@
     "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
