--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "pod:install": "cd ios && pod install && cd ../",
-    "pod:deintegrate": "cd ios && pod deintegrate && cd ../"
+    "pod:deintegrate": "cd ios && pod deintegrate && cd ../",
+    "expo:prebuild": "npx expo prebuild",
+    "expo:prebuild-clean": "npx expo prebuild --clean"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "7.6.3",
