--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,6 +100,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('UPOWERTOOLS_RELEASE_STORE_FILE')) {
+                storeFile file(UPOWERTOOLS_RELEASE_STORE_FILE)
+                storePassword UPOWERTOOLS_RELEASE_STORE_PASSWORD
+                keyAlias UPOWERTOOLS_RELEASE_KEY_ALIAS
+                keyPassword UPOWERTOOLS_RELEASE_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -108,7 +116,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
