--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,3 +56,9 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 expo.useLegacyPackaging=false
 
 VisionCamera_enableCodeScanner=true
+
+# 以下是發布Keysotre設定
+UPOWERTOOLS_RELEASE_STORE_FILE=u-power-tools-release-key.keystore
+UPOWERTOOLS_RELEASE_KEY_ALIAS=u-power-tools-key
+UPOWERTOOLS_RELEASE_STORE_PASSWORD=19870118
+UPOWERTOOLS_RELEASE_KEY_PASSWORD=19870118
