--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,3 +38,8 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+
+plugins {
+  // Add the dependency for the Google services Gradle plugin
+  id 'com.google.gms.google-services' version '4.4.1' apply false
+}
