--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "7.6.3",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/crashlytics": "^19.0.1",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
     "dayjs": "^1.11.10",
     "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
+    "expo-build-properties": "~0.11.1",
     "expo-file-system": "~16.0.8",
     "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
