chore: add firebase in project

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,10 +55,10 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
+VisionCamera_enableCodeScanner=true
 
-# 以下是發布Keysotre設定
+# Keysotre
 UPOWERTOOLS_RELEASE_STORE_FILE=u-power-tools-release-key.keystore
-UPOWERTOOLS_RELEASE_KEY_ALIAS=u-power-tools-key
+UPOWERTOOLS_RELEASE_KEY_ALIAS=u-power-tools-key-alias
 UPOWERTOOLS_RELEASE_STORE_PASSWORD=19870118
 UPOWERTOOLS_RELEASE_KEY_PASSWORD=19870118
-VisionCamera_enableCodeScanner=true
