--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
     }
@@ -37,9 +39,4 @@ allprojects {
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
     }
-}
-
-plugins {
-  // Add the dependency for the Google services Gradle plugin
-  id 'com.google.gms.google-services' version '4.4.1' apply false
 }
