--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "infoPlist": {
         "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera"
       },
-      "bundleIdentifier": "com.u-power-tools.development"
+      "bundleIdentifier": "com.u-power-tools.development",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "icon": "./assets/icon.png",
