--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
     "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.11",
     "expo-file-system": "~16.0.8",
     "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
