chore: set android build setting

--- a/ios/UPowerTools/Info.plist
+++ b/ios/UPowerTools/Info.plist
@@ -30,6 +30,12 @@
           <string>com.u-power-tools.development</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+u-power-tools</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
