--- a/ios/UPOWEREVCCID.xcodeproj/xcshareddata/xcschemes/UPOWEREVCCID.xcscheme
+++ b/ios/UPOWEREVCCID.xcodeproj/xcshareddata/xcschemes/UPOWEREVCCID.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "UPowerTools.app"
-               BlueprintName = "UPowerTools"
-               ReferencedContainer = "container:UPowerTools.xcodeproj">
+               BuildableName = "UPOWEREVCCID.app"
+               BlueprintName = "UPOWEREVCCID"
+               ReferencedContainer = "container:UPOWEREVCCID.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "UPowerToolsTests.xctest"
-               BlueprintName = "UPowerToolsTests"
-               ReferencedContainer = "container:UPowerTools.xcodeproj">
+               BuildableName = "UPOWEREVCCIDTests.xctest"
+               BlueprintName = "UPOWEREVCCIDTests"
+               ReferencedContainer = "container:UPOWEREVCCID.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "UPowerTools.app"
-            BlueprintName = "UPowerTools"
-            ReferencedContainer = "container:UPowerTools.xcodeproj">
+            BuildableName = "UPOWEREVCCID.app"
+            BlueprintName = "UPOWEREVCCID"
+            ReferencedContainer = "container:UPOWEREVCCID.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "UPowerTools.app"
-            BlueprintName = "UPowerTools"
-            ReferencedContainer = "container:UPowerTools.xcodeproj">
+            BuildableName = "UPOWEREVCCID.app"
+            BlueprintName = "UPOWEREVCCID"
+            ReferencedContainer = "container:UPOWEREVCCID.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
