--- a/ios/UPOWEREVCCID/Info.plist
+++ b/ios/UPOWEREVCCID/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>U-Power-Tools</string>
+    <string>U-POWER-EVCCID</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,13 +27,13 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.u-power-tools.development</string>
+          <string>com.upower.evccid.development</string>
         </array>
       </dict>
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+u-power-tools</string>
+          <string>exp+u-power-evccid</string>
         </array>
       </dict>
     </array>
