perf: remove unnecessary functions and hooks
remove unnecessary hooks and import in BindingListCell.
remove unnecessary import in scan screen.

implement google services with google-services.json and GoogleService-Info.plist

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # dependencies
 node_modules/
 
+android/
+ios/
+
 # Expo
 .expo/
 dist/
@@ -15,6 +18,10 @@ web-build/
 *.p12
 *.key
 *.mobileprovision
+
+*.apk
+*.aab
+*.ipa
 
 # Metro
 .metro-health-check*
