--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "android:build-apk": "cd android && ./gradlew assembleRelease && cd ../"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "7.6.3",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/crashlytics": "^19.0.1",
