--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
+    "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
     "expo": "~50.0.13",
     "expo-blur": "~12.9.2",
@@ -30,6 +31,7 @@
     "expo-file-system": "~16.0.8",
     "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
