chore: mutate conditional for project name and id
add suffix "dev" in app id when env is development.
for more conditional, use app.config.js file and remove app.json.

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'U-POWER-EVCCID'
+rootProject.name = 'U-POWER-EVCCID-Dev'
 
 dependencyResolutionManagement {
   versionCatalogs {
