--- a/ios/UPOWEREVCCID/Info.plist
+++ b/ios/UPOWEREVCCID/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>U-POWER-EVCCID</string>
+    <string>U-POWER-EVCCID-Dev</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -33,7 +33,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+u-power-evccid</string>
+          <string>exp+u-power-evccid-dev</string>
         </array>
       </dict>
     </array>
