--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "U-POWER-EVCCID",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "start-local": "expo start --dev-client --localhost",
+    "start-dev": "NODE_ENV=development npx expo start",
+    "start-dev-local": "NODE_ENV=development npx expo start --localhost",
+    "start-staging": "NODE_ENV=test npx expo start",
+    "start-staging-local": "NODE_ENV=test npx expo start --localhost",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "pod:install": "cd ios && pod install && cd ../",
     "pod:deintegrate": "cd ios && pod deintegrate && cd ../",
-    "expo:prebuild": "npx expo prebuild",
-    "expo:prebuild-clean": "npx expo prebuild --clean",
-    "expo:build-android-local": "eas build --platform android --local",
-    "expo:build-ios-local": "eas build --platform ios --local",
+    "prebuild": "npx expo prebuild",
+    "prebuild-clean": "npx expo prebuild --clean",
+    "build-android-dev-local": "eas build --platform android --profile development --local",
+    "build-ios-dev-local": "eas build --platform ios --profile development --local",
     "android:clean": "cd android && ./gradlew clean && cd ../",
     "android:build-aab": "cd android && ./gradlew bundleRelease && cd ../",
     "android:build-apk": "cd android && ./gradlew assembleRelease && cd ../"
