--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "U-POWER-EVCCID",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "scripts": {
     "start-dev": "NODE_ENV=development npx expo start",
     "start-dev-local": "NODE_ENV=development npx expo start --localhost",
@@ -20,8 +20,8 @@
     "android:build-apk": "cd android && ./gradlew assembleRelease && cd ../"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.6.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/crashlytics": "^19.0.1",
     "@react-navigation/native": "^6.1.14",
@@ -29,28 +29,28 @@
     "apisauce": "^3.0.1",
     "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.13",
-    "expo-blur": "~12.9.2",
-    "expo-build-properties": "~0.11.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-file-system": "~16.0.8",
-    "expo-sharing": "~11.10.0",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.0",
+    "expo-blur": "~13.0.3",
+    "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.29",
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^3.9.0",
+    "react-native-vision-camera": "^4.6.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
