--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "U-POWER-EVCCID",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "scripts": {
     "start-dev": "NODE_ENV=development npx expo start",
     "start-dev-local": "NODE_ENV=development npx expo start --localhost",
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/crashlytics": "^19.0.1",
     "@react-navigation/native": "^6.1.14",
@@ -29,26 +29,26 @@
     "apisauce": "^3.0.1",
     "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
-    "expo": "^51.0.0",
-    "expo-blur": "~13.0.3",
-    "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.29",
-    "expo-file-system": "~17.0.1",
-    "expo-sharing": "~12.0.1",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.0",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
+    "expo-dev-client": "~5.0.11",
+    "expo-file-system": "~18.0.10",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "^4.6.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "typescript": "~5.3.3"
   },
