--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-toast-message": "^2.2.0",
+    "react-native-toast-message": "2.2.1",
     "react-native-vision-camera": "^4.6.3",
     "xlsx": "^0.18.5"
   },
