--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "2.2.1",
@@ -49,8 +49,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "jwt-decode",
+          "core-js",
+          "patch-package",
+          "xlsx"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
