--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
+    "babel-preset-expo": "^13.2.1",
     "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
     "expo": "^52.0.0",
+    "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.11",
