chore: upgrade Expo SDK from v52 to v54
- Update Expo SDK and related dependencies to latest versions
- Upgrade React Native from 0.76.9 to 0.81.4 and React to 19.1.0
- Update Android build configuration and remove Firebase Crashlytics
- Reorganize package structure and update app icons
- Separate Google Services config for dev/prod environments

--- a/eas.json
+++ b/eas.json
@@ -25,8 +25,12 @@
       }
     },
     "production": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://app-upower-vinevccid.azurewebsites.net",
+        "EXPO_PUBLIC_API_URL": "https://app-upower-testing-vinevccid.azurewebsites.net",
         "EXPO_PUBLIC_APP_ENV": "production"
       }
     }
