--- a/package.json
+++ b/package.json
@@ -21,39 +21,38 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-firebase/app": "^19.0.1",
-    "@react-native-firebase/crashlytics": "^19.0.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "apisauce": "^3.0.1",
-    "babel-preset-expo": "^13.2.1",
+    "babel-preset-expo": "^54.0.4",
     "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
-    "expo": "^52.0.0",
-    "expo-asset": "~11.0.5",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
-    "expo-dev-client": "~5.0.11",
-    "expo-file-system": "~18.0.10",
-    "expo-sharing": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^54.0.13",
+    "expo-asset": "~12.0.9",
+    "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
     "jwt-decode": "^4.0.0",
     "patch-package": "^8.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
     "react-native-toast-message": "2.2.1",
-    "react-native-vision-camera": "^4.6.3",
+    "react-native-vision-camera": "^4.7.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "typescript": "~5.3.3"
+    "@types/react": "~19.1.17",
+    "typescript": "~5.9.3"
   },
   "private": true,
   "expo": {
