--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.upower.evccid'
+    namespace 'com.upower.evccid.development'
     defaultConfig {
-        applicationId 'com.upower.evccid'
+        applicationId 'com.upower.evccid.development'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.3.2"
+        versionName "1.3.3"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
