--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-asset": "~12.0.9",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.8",
     "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
@@ -46,7 +47,6 @@
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "2.2.1",
-    "react-native-vision-camera": "^4.7.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
