security(Android): enhance app security with anti-tampering and code protection
- Add ProGuard rules to remove debug logs and improve code obfuscation
- Implement InjectionDetector for dynamic code injection detection
- Add SecurityUtils for integrity checks, anti-debugging, and root detection
- Integrate security checks in MainApplication startup
- Create Expo config plugin to automate security configurations
- Update API config to use expo-constants for environment variables
- Add staging environment support with Firebase configuration
- Update EAS build profiles for staging and production environments
- Remove iOS build artifacts from repository

--- a/package.json
+++ b/package.json
@@ -4,23 +4,36 @@
   "scripts": {
     "start-dev": "NODE_ENV=development npx expo start",
     "start-dev-local": "NODE_ENV=development npx expo start --localhost",
-    "start-staging": "NODE_ENV=test npx expo start",
-    "start-staging-local": "NODE_ENV=test npx expo start --localhost",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start-staging": "NODE_ENV=staging npx expo start",
+    "start-staging-local": "NODE_ENV=staging npx expo start --localhost",
+    "start-prod": "NODE_ENV=production npx expo start",
+    "start-prod-local": "NODE_ENV=production npx expo start --localhost",
+    "android:staging": "EXPO_PUBLIC_APP_ENV=staging expo run:android",
+    "android:dev": "EXPO_PUBLIC_APP_ENV=development expo run:android",
+    "android": "EXPO_PUBLIC_APP_ENV=production expo run:android",
+    "ios:staging": "EXPO_PUBLIC_APP_ENV=staging expo run:ios",
+    "ios:dev": "EXPO_PUBLIC_APP_ENV=development expo run:ios",
+    "ios": "EXPO_PUBLIC_APP_ENV=production expo run:ios",
     "web": "expo start --web",
     "pod:install": "cd ios && pod install && cd ../",
     "pod:deintegrate": "cd ios && pod deintegrate && cd ../",
     "prebuild": "npx expo prebuild",
-    "prebuild-clean": "npx expo prebuild --clean",
+    "prebuild-clean-dev": "EXPO_PUBLIC_APP_ENV=development npx expo prebuild --clean",
+    "prebuild-clean-staging": "EXPO_PUBLIC_APP_ENV=staging npx expo prebuild --clean",
+    "prebuild-clean-prod": "EXPO_PUBLIC_APP_ENV=production npx expo prebuild --clean",
     "build-android-dev-local": "eas build --platform android --profile development --local",
+    "build-android-staging-local": "eas build --platform android --profile staging --local",
+    "build-android-prod-local": "eas build --platform android --profile production --local",
     "build-ios-dev-local": "eas build --platform ios --profile development --local",
+    "build-ios-staging-local": "eas build --platform ios --profile staging --local",
+    "build-ios-prod-local": "eas build --platform ios --profile production --local",
     "android:clean": "cd android && ./gradlew clean && cd ../",
     "android:build-aab": "cd android && ./gradlew bundleRelease && cd ../",
     "android:build-apk": "cd android && ./gradlew assembleRelease && cd ../"
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
+    "@expo/config-plugins": "^54.0.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.5",
@@ -35,6 +48,7 @@
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-camera": "~17.0.8",
+    "expo-constants": "^18.0.10",
     "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
