--- a/eas.json
+++ b/eas.json
@@ -20,12 +20,12 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://app-upower-testing-vinevccid.azurewebsites.net",
+        "EXPO_PUBLIC_API_URL": "https://app-upower-testing-vinevccid-staging.azurewebsites.net",
         "EXPO_PUBLIC_APP_ENV": "staging"
       }
     },
     "production": {
-      "distribution": "internal",
+      "distribution": "store",
       "android": {
         "buildType": "apk"
       },
